Version 2.1.156
    Fixed a bug where Green Thumb would replant blocks floating in the air
    Fixed a bug where the admin and party chat toggles in chat.yml didn't function as intended
    * Fixed a bug where Master Angler rank 1 level requirement was set too high (default configs)
    Added some errors that trigger if a plugin hooking into mcMMO is grabbing leaderboards for child skills through our SQL/FlatFile class (which don't exist)
    mcMMO will automatically fix some errors in logic for user settings in skillranks.yml
    Corrected some logic errors when checking for oddities in skillranks.yml
    Removed incorrect translations of Master Angler from various locales
    Modified Master Angler stat lines in /fishing
    Updated Green Thumb description to mention that it needs a hoe

    NOTES:
    You don't need to touch your config files, this update handles everything automagically.
    * - If you haven't manually edited your Master Angler entries in skillranks.yml then the previous mcMMO update has rank 1 for Master Angler too high, this update automatically fixes it.
    You may have noticed sometimes config file entries are in a strange jumbled order, yeah that's "normal". We'll be moving to HOCON for the config update and wont' have to deal with this crap for much longer.

Version 2.1.155
    Master Angler now has 8 ranks
    Master Angler is now supported by the latest builds of Spigot on 1.16.4
    Wolves will now earn a lot more XP from combat than before (Wolves are going to be tweaked a lot in the near future)
    Fixed a bug where Spectral Arrow awarded too much XP
    Fixed a bug where party members other than the party leader had names that weren't properly hex colored
    Added 'Skills.Fishing.MasterAngler.Tick_Reduction_Per_Rank.Min_Wait' to advanced.yml
    Added 'Skills.Fishing.MasterAngler.Tick_Reduction_Per_Rank.Max_Wait' to advanced.yml
    Added 'Skills.Fishing.MasterAngler.Boat_Tick_Reduction.Max_Wait' to advanced.yml