@@ -101,6 +101,7 @@ public enum SubSkillType {
 
     /* Woodcutting */
 /*    WOODCUTTING_BARK_SURGEON(3),*/
+    WOODCUTTING_KNOCK_ON_WOOD(2),
     WOODCUTTING_HARVEST_LUMBER(1),
     WOODCUTTING_LEAF_BLOWER(1),
 /*    WOODCUTTING_NATURES_BOUNTY(3),
