@@ -184,6 +184,7 @@ Axes.Ability.Bonus.4=Greater Impact
 Axes.Ability.Bonus.5=Deal {0} Bonus DMG to unarmored foes
 Axes.Ability.Lower=&7You lower your Axe.
 Axes.Ability.Ready=&3You &6ready&3 your Axe.
+Axes.Ability.Ready.Extra=&3You &6ready&3 your Axe. [[GRAY]]({0} is on cooldown for {1}s)
 Axes.Combat.CritStruck=&4You were CRITICALLY hit!
 Axes.Combat.CriticalHit=CRITICAL HIT!
 Axes.Combat.GI.Proc=&a**STRUCK WITH GREAT FORCE**
@@ -531,6 +532,11 @@ Woodcutting.SubSkill.TreeFeller.Description=Make trees explode
 Woodcutting.SubSkill.TreeFeller.Stat=Tree Feller Length
 Woodcutting.SubSkill.LeafBlower.Name=Leaf Blower
 Woodcutting.SubSkill.LeafBlower.Description=Blow Away Leaves
+Woodcutting.SubSkill.KnockOnWood.Name=Knock On Wood
+Woodcutting.SubSkill.KnockOnWood.Description=Find additional goodies when using Tree Feller
+Woodcutting.SubSkill.KnockOnWood.Stat=Knock on Wood
+Woodcutting.SubSkill.KnockOnWood.Loot.Normal=Standard loot from trees
+Woodcutting.SubSkill.KnockOnWood.Loot.Rank2=Standard loot from trees and experience orbs
 Woodcutting.SubSkill.HarvestLumber.Name=Harvest Lumber
 Woodcutting.SubSkill.HarvestLumber.Description=Skillfully extract more Lumber
 Woodcutting.SubSkill.HarvestLumber.Stat=Double Drop Chance
@@ -989,6 +995,8 @@ Skills.Stats={0}&a{1}&3 XP(&7{2}&3/&7{3}&3)
 Skills.ChildStats={0}&a{1}
 Skills.MaxXP=Max
 Skills.TooTired=You are too tired to use that ability again. &e({0}s)
+Skills.TooTired.Named=[[GRAY]](&6{0}&e {1}s[[GRAY]])
+Skills.TooTired.Extra=&6{0} &eSuper Ability CDs - {1}
 Skills.Cancelled=&6{0} &ccancelled!
 Skills.ConfirmOrCancel=&aRight-click again to confirm &6{0}&a. Left-click to cancel.
 Skills.AbilityGateRequirementFail=&7You require &e{0}&7 more levels of &3{1}&7 to use this super ability.
